# omp101

./: LICENSE  setenv.shrc
src/: 0_matmul.cc  1_parallel_pi.cc  2_parallel_pi_critical.cc  3_parallel_pi_reduction.cc  CMakeLists.txt
